--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -67,6 +67,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+
   font-size: 36px;
   font-weight: 700;
 }
@@ -422,4 +423,10 @@ Small Device Styles
     font-size: 11px;
   }
 
+}
+@font-face {
+  font-family: 'Lobster';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lobster'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v16/NIaFDq6p6eLpSvtV2DTNDQLUuEpTyoUstqEm5AMlJo4.woff) format('woff');
 }
